# FileTime

./: .gitmodules
Core/: .gitignore  .hgignore  CMakeLists.txt  COPYING  FileTimeConfig.cmake.in  Makefile.am  configure.ac  setuplinks.sh
Core/.M4/: ConfigDirectory.m4
Core/.M4.bak/: LinkerScripts.m4
Core/Include/FileTime/.Config/: ConfiguredFileTime.h.in
Core/Include/FileTime/Common/: ErrorDetectionCode.h  FileTimeSettings.h  FileTimeTypes.h
Core/Lib/: CMakeLists.txt
Core/Lib/.Config/: CMakeLists.txt  Makefile.am
Core/Lib/.LinkerScript/: Common.in
Core/Lib/Common/: CMakeLists.txt  ErrorDetectionCode.cpp  Makefile.am
Core/Lib/Common/Tests/: ErrorDetectionCodeTest.cpp  FileTimeSettingsTest.cpp  FileTimeTypesTest.cpp  TestConf.cmake  TestConf.mak
Core/Lib/Tests/: Makefile.am  TestDriver.cpp  TestDriver.h
Core/Lib/Tests/.TestsCommon/: Makefile.am
